k8s-frontend.yaml
# Frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 23ws-ase-pr-inso-01-frontend
  namespace: 23ws-ase-pr-inso-01
spec:
  selector:
    matchLabels:
      app: 23ws-ase-pr-inso-01-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: 23ws-ase-pr-inso-01-frontend
    spec:
      containers:
        - name: 23ws-ase-pr-inso-01-frontend
          image: registry.reset.inso-w.at/2023ws-ase-pr-group/23ws-ase-pr-inso-01/frontend:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
              ephemeral-storage: "100Mi"
            limits:
              memory: "280Mi"
              cpu: "500m"
              ephemeral-storage: "100Mi"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 3
          startupProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 120
          lifecycle:
            preStop:
              httpGet:
                port: 80
                path: /health/prepareShutdown
      imagePullSecrets:
        - name: secret-dockercfg
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
---
apiVersion: v1
kind: Service
metadata:
  name: s-23ws-ase-pr-inso-01-frontend-service
  namespace: 23ws-ase-pr-inso-01
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: 23ws-ase-pr-inso-01-frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "23ws-ase-pr-inso-01-ingress"
  namespace: 23ws-ase-pr-inso-01
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "23ws-ase-pr-inso-01.apps.student.inso-w.at"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s-23ws-ase-pr-inso-01-frontend-service
                port:
                  number: 80
